--- a/WebContent/pages/private/workflows/workflow_composer.xhtml
+++ b/WebContent/pages/private/workflows/workflow_composer.xhtml
@@ -230,7 +230,8 @@
                                     </p:column>
 
                                     <p:column>
-                                        <p:commandButton actionListener="#{workflowComposerBean.removeElement(instance)}" icon="ui-icon-trash"  update="instancesList2, form:slaopt:instancesB, :form:growl"/>
+                                        <p:commandButton actionListener="#{workflowComposerBean.removeElement(instance)}" icon="ui-icon-trash"  update="instancesList2, :form:growl"/> 
+<!--                                        form:slaopt:instancesB-->
                                     </p:column>
                                 </p:dataTable>
                             </p:fieldset>    
@@ -303,7 +304,7 @@
                                     </h:panelGroup>
                                 </h:panelGrid> 
 
-                                <p:commandButton value="Aceitar SLA?" id="nonAjax" ajax="false" />
+                                <p:commandButton value="Aceitar SLA?" />
                             </p:fieldset>  
                         </p:panel> 
                     </p:tab>
@@ -322,6 +323,10 @@
                                     </f:facet>
                                     <p:outputLabel value="Id" style="font-weight: bold"/>
                                     <p:outputLabel value="#{workflowComposerBean.workflow.id}" style="font-weight: bold"/>
+                                    <p:outputLabel value="Usuário" style="font-weight: bold"/>                                           
+                                    <p:outputLabel value="#{sessionBean.loggedUser.nome}" style="font-weight: bold"/>                                         
+                                    <p:outputLabel value="Provedor" style="font-weight: bold"/>  
+                                    <p:outputLabel value="#{workflowComposerBean.provider}" style="font-weight: bold"/>  
                                     <p:outputLabel value="Descrição" style="font-weight: bold"/>
                                     <p:outputLabel value="#{workflowComposerBean.workflow.description} " />
                                     <p:outputLabel value="Tamanho" style="font-weight: bold"/>
@@ -330,6 +335,8 @@
                                     <p:outputLabel value="#{workflowComposerBean.workflow.creationDatestamp}" />
                                     <p:outputLabel value="Quantidade de inputs" style="font-weight: bold"/>
                                     <p:outputLabel value="#{workflowComposerBean.jobs.size()}" />
+                                    <p:outputLabel value="Quantidade de VM's" style="font-weight: bold"/>
+                                    <p:outputLabel value="SLA Aceito?" style="font-weight: bold"/>
                                     <p:outputLabel value="Status" style="font-weight: bold"/>
                                     <p:outputLabel value="#{workflowComposerBean.workflowStatus}" 
                                                    style="font-weight: bold; color: #{workflowComposerBean.workflowColor}"/>
